smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-multiple-lines-comment.smithy
// Parse error at line 5, column 5 near `//`: Expected a valid identifier character, but found '/' | Model
$version: "2.0"
namespace smithy.example

use // Invalid
smithy.example#Foo
